# FrankaDiffusionPolicy

./: README.md
action_franka_bridge/: package.xml  setup.cfg  setup.py
action_franka_bridge/action_franka_bridge/: action_franka_bridge.py  command_mode.py  data_collection.py  model_input_publisher.py  moveIt_api.py
action_franka_bridge/config/: integrate.rviz  multi_img.rviz
action_franka_bridge/launch/: camera.launch.py  integrate_servo.launch.py
commandmode/: package.xml  setup.cfg  setup.py
commandmode/commandmode/: commandmode.py
commandmode/launch/: camera.launch.py
