<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_franka_bridge</name>
  <version>0.0.0</version>
  <description>A package to operate a franka robot using diffusion policy</description>
  <maintainer email="courtneysmith2024@u.northwestern.edu">Courtney Smith</maintainer>
  <license>APLv2</license>

  <depend>visualization_msgs</depend>
  <depend>franka_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>cv2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>franka_teleop</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
