<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>commandmode</name>
  <version>0.0.1</version>
  <description>"A package to interface with a user via keyboard inputs to select command state."</description>
  <maintainer email="courtneysmith2024@u.northwestern.edu">Courtney Smith</maintainer>
  <license>APLv2</license>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
